--- a/pulling_data/summary.html
+++ b/pulling_data/summary.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2019-06-24 Mon 12:24 -->
+<!-- 2019-06-24 Mon 14:37 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Summary of Data and Source</title>
@@ -229,8 +229,21 @@ for the JavaScript code in this tag.
 <body>
 <div id="content">
 <h1 class="title">Summary of Data and Source</h1>
+<div id="table-of-contents">
+<h2>Table of Contents</h2>
+<div id="text-table-of-contents">
+<ul>
+<li><a href="#org79988f6">1. Available Data</a></li>
+<li><a href="#org2a3dc0c">2. Unavailable Data</a></li>
+</ul>
+</div>
+</div>
+
+<div id="outline-container-org79988f6" class="outline-2">
+<h2 id="org79988f6"><span class="section-number-2">1</span> Available Data</h2>
+<div class="outline-text-2" id="text-1">
 <p>
-Below is a summary of each variable and its source and description.
+Below is a summary of each variable and its source and description.  These data are downloaded to csv.
 </p>
 
 
@@ -245,6 +258,8 @@ Below is a summary of each variable and its source and description.
 <col  class="org-left" />
 
 <col  class="org-left" />
+
+<col  class="org-left" />
 </colgroup>
 <thead>
 <tr>
@@ -252,6 +267,7 @@ Below is a summary of each variable and its source and description.
 <th scope="col" class="org-left">Source</th>
 <th scope="col" class="org-left">Code</th>
 <th scope="col" class="org-left">Description</th>
+<th scope="col" class="org-left">Notes</th>
 </tr>
 </thead>
 <tbody>
@@ -260,6 +276,7 @@ Below is a summary of each variable and its source and description.
 <td class="org-left">IMF</td>
 <td class="org-left">PCPI_PC_CP_A_PT</td>
 <td class="org-left">Prices, Consumer Price Index, All items, Percentage change, Corresponding period previous year, Percent</td>
+<td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
@@ -267,6 +284,7 @@ Below is a summary of each variable and its source and description.
 <td class="org-left">IMF</td>
 <td class="org-left">LUR_PT</td>
 <td class="org-left">Labor Markets, Unemployment Rate, Percent</td>
+<td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
@@ -274,6 +292,7 @@ Below is a summary of each variable and its source and description.
 <td class="org-left">IMF</td>
 <td class="org-left">NGDP_R_CH_SA_XDC</td>
 <td class="org-left">National Accounts, Expenditure, Gross Domestic Product, Real, Reference Chained, Seasonally adjusted, Domestic Currency</td>
+<td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
@@ -281,6 +300,7 @@ Below is a summary of each variable and its source and description.
 <td class="org-left">IMF</td>
 <td class="org-left">BCG_GALM_G01_XDC</td>
 <td class="org-left">Fiscal, Budgetary Central Government, Assets and Liabilities, Debt (at Market Value), Classification of the stocks of assets and liabilities, 2001 Manual, Domestic Currency</td>
+<td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
@@ -288,6 +308,7 @@ Below is a summary of each variable and its source and description.
 <td class="org-left">WB</td>
 <td class="org-left">BN.KLT.DINV.CD</td>
 <td class="org-left">Foreign direct investment, net (BoP, current US$)</td>
+<td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
@@ -295,6 +316,7 @@ Below is a summary of each variable and its source and description.
 <td class="org-left">WB</td>
 <td class="org-left">BN.CAB.XOKA.GD.ZS</td>
 <td class="org-left">Current Account Balance as % of GDP</td>
+<td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
@@ -302,6 +324,7 @@ Below is a summary of each variable and its source and description.
 <td class="org-left">WB</td>
 <td class="org-left">IC.FRM.BNKS.ZS</td>
 <td class="org-left">Firms using banks to finance investment (% of firms)</td>
+<td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
@@ -309,12 +332,14 @@ Below is a summary of each variable and its source and description.
 <td class="org-left">WB</td>
 <td class="org-left">DT.DOD.PVLX.CD</td>
 <td class="org-left">Present value of external debt (current US$)</td>
+<td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
 <td class="org-left">Multilateral Debt</td>
 <td class="org-left">WB</td>
 <td class="org-left">DT.DOD.MLAT.ZS</td>
+<td class="org-left">&#xa0;</td>
 <td class="org-left">&#xa0;</td>
 </tr>
 
@@ -323,6 +348,7 @@ Below is a summary of each variable and its source and description.
 <td class="org-left">WB</td>
 <td class="org-left">BX.TRF.PWKR.DT.GD.ZS</td>
 <td class="org-left">Personal remittances, received (% of GDP)</td>
+<td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
@@ -330,6 +356,7 @@ Below is a summary of each variable and its source and description.
 <td class="org-left">WB</td>
 <td class="org-left">BG.GSR.NFSV.GD.ZS</td>
 <td class="org-left">Trade in services (% of GDP)</td>
+<td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
@@ -337,6 +364,7 @@ Below is a summary of each variable and its source and description.
 <td class="org-left">WB</td>
 <td class="org-left">NE.EXP.GNFS.ZS</td>
 <td class="org-left">Exports of goods and services (% of GDP)</td>
+<td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
@@ -344,6 +372,7 @@ Below is a summary of each variable and its source and description.
 <td class="org-left">WB</td>
 <td class="org-left">NY.GDP.MKTP.KD.ZG</td>
 <td class="org-left">GDP growth (annual %)</td>
+<td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
@@ -351,6 +380,7 @@ Below is a summary of each variable and its source and description.
 <td class="org-left">WB</td>
 <td class="org-left">NY.GDP.PCAP.KD.ZG</td>
 <td class="org-left">GDP per capita growth (annual %)</td>
+<td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
@@ -358,6 +388,7 @@ Below is a summary of each variable and its source and description.
 <td class="org-left">WB</td>
 <td class="org-left">NY.GDS.TOTL.ZS</td>
 <td class="org-left">Gross domestic savings (% of GDP)</td>
+<td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
@@ -365,6 +396,7 @@ Below is a summary of each variable and its source and description.
 <td class="org-left">WB</td>
 <td class="org-left">NE.IMP.GNFS.ZS</td>
 <td class="org-left">Imports of goods and services (% of GDP)</td>
+<td class="org-left">&#xa0;</td>
 </tr>
 
 <tr>
@@ -372,12 +404,72 @@ Below is a summary of each variable and its source and description.
 <td class="org-left">WB</td>
 <td class="org-left">SL.TLF.CACT.ZS</td>
 <td class="org-left">Labor force participation rate, total (% of total population ages 15+) (modeled ILO estimate)</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">Military Spending</td>
+<td class="org-left">WB</td>
+<td class="org-left">MS.MIL.XPND.CN</td>
+<td class="org-left">Military Expenditures (US $)</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">Ease of Business</td>
+<td class="org-left">WB</td>
+<td class="org-left">IC.BUS.EASE.XQ</td>
+<td class="org-left">Ease of doing business index (1=most business-friendly regulations)</td>
+<td class="org-left">Data only exists for 2018</td>
+</tr>
+
+<tr>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
 </tr>
 </tbody>
 </table>
 </div>
+</div>
+
+
+<div id="outline-container-org2a3dc0c" class="outline-2">
+<h2 id="org2a3dc0c"><span class="section-number-2">2</span> Unavailable Data</h2>
+<div class="outline-text-2" id="text-2">
+<table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
+
+
+<colgroup>
+<col  class="org-left" />
+
+<col  class="org-left" />
+</colgroup>
+<thead>
+<tr>
+<th scope="col" class="org-left">Variable</th>
+<th scope="col" class="org-left">Reason</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="org-left">Credit Rating</td>
+<td class="org-left">Not in IMF or WB. See here: <a href="https://www.fitchratings.com/site/home">https://www.fitchratings.com/site/home</a></td>
+</tr>
+
+<tr>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+</div>
 <div id="postamble" class="status">
-<p class="date">Created: 2019-06-24 Mon 12:24</p>
+<p class="date">Created: 2019-06-24 Mon 14:37</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
