updated summary with sent data

--- a/pulling_data/summary.html
+++ b/pulling_data/summary.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2019-06-24 Mon 14:37 -->
+<!-- 2019-07-01 Mon 13:28 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Summary of Data and Source</title>
@@ -233,14 +233,15 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org79988f6">1. Available Data</a></li>
-<li><a href="#org2a3dc0c">2. Unavailable Data</a></li>
+<li><a href="#org1e363ab">1. Available Data</a></li>
+<li><a href="#org973000a">2. Questionable</a></li>
+<li><a href="#org48be2cb">3. Unavailable Data</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org79988f6" class="outline-2">
-<h2 id="org79988f6"><span class="section-number-2">1</span> Available Data</h2>
+<div id="outline-container-org1e363ab" class="outline-2">
+<h2 id="org1e363ab"><span class="section-number-2">1</span> Available Data</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 Below is a summary of each variable and its source and description.  These data are downloaded to csv.
@@ -416,6 +417,78 @@ Below is a summary of each variable and its source and description.  These data 
 </tr>
 
 <tr>
+<td class="org-left">NATO Membership</td>
+<td class="org-left">NATO</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">NATO members by year.</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">Shadow Economy</td>
+<td class="org-left">?</td>
+<td class="org-left">?</td>
+<td class="org-left">Size of the shadow economy. Don't know the units. Need to scale by GDP or other measure.</td>
+<td class="org-left">Data for all years 1991 to 2015</td>
+</tr>
+
+<tr>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+</tbody>
+</table>
+</div>
+</div>
+
+
+<div id="outline-container-org973000a" class="outline-2">
+<h2 id="org973000a"><span class="section-number-2">2</span> Questionable</h2>
+<div class="outline-text-2" id="text-2">
+<table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
+
+
+<colgroup>
+<col  class="org-left" />
+
+<col  class="org-left" />
+
+<col  class="org-left" />
+
+<col  class="org-left" />
+
+<col  class="org-left" />
+</colgroup>
+<thead>
+<tr>
+<th scope="col" class="org-left">Variable</th>
+<th scope="col" class="org-left">Source</th>
+<th scope="col" class="org-left">Code</th>
+<th scope="col" class="org-left">Description</th>
+<th scope="col" class="org-left">Notes</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="org-left">Corruption</td>
+<td class="org-left">?</td>
+<td class="org-left">?</td>
+<td class="org-left">?</td>
+<td class="org-left">The measure changed from 2011 to 2012.  Have to look at the change and see if we can still use the data</td>
+</tr>
+
+<tr>
+<td class="org-left">% Informal Sector</td>
+<td class="org-left">?</td>
+<td class="org-left">?</td>
+<td class="org-left">?</td>
+<td class="org-left">% of firms in the informal sector. Don't have enough years.</td>
+</tr>
+
+<tr>
 <td class="org-left">Ease of Business</td>
 <td class="org-left">WB</td>
 <td class="org-left">IC.BUS.EASE.XQ</td>
@@ -435,10 +508,9 @@ Below is a summary of each variable and its source and description.  These data 
 </div>
 </div>
 
-
-<div id="outline-container-org2a3dc0c" class="outline-2">
-<h2 id="org2a3dc0c"><span class="section-number-2">2</span> Unavailable Data</h2>
-<div class="outline-text-2" id="text-2">
+<div id="outline-container-org48be2cb" class="outline-2">
+<h2 id="org48be2cb"><span class="section-number-2">3</span> Unavailable Data</h2>
+<div class="outline-text-2" id="text-3">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -469,7 +541,7 @@ Below is a summary of each variable and its source and description.  These data 
 </div>
 </div>
 <div id="postamble" class="status">
-<p class="date">Created: 2019-06-24 Mon 14:37</p>
+<p class="date">Created: 2019-07-01 Mon 13:28</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
