bolded important indicators

--- a/pulling_data/summary.html
+++ b/pulling_data/summary.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2019-07-01 Mon 13:28 -->
+<!-- 2019-07-16 Tue 10:06 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Summary of Data and Source</title>
@@ -233,15 +233,15 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org1e363ab">1. Available Data</a></li>
-<li><a href="#org973000a">2. Questionable</a></li>
-<li><a href="#org48be2cb">3. Unavailable Data</a></li>
+<li><a href="#org3552c59">1. Available Data</a></li>
+<li><a href="#org313dd81">2. Questionable</a></li>
+<li><a href="#org4aad63b">3. Unavailable Data</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org1e363ab" class="outline-2">
-<h2 id="org1e363ab"><span class="section-number-2">1</span> Available Data</h2>
+<div id="outline-container-org3552c59" class="outline-2">
+<h2 id="org3552c59"><span class="section-number-2">1</span> Available Data</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 Below is a summary of each variable and its source and description.  These data are downloaded to csv.
@@ -315,7 +315,7 @@ Below is a summary of each variable and its source and description.  These data 
 <tr>
 <td class="org-left">Current Account</td>
 <td class="org-left">WB</td>
-<td class="org-left">BN.CAB.XOKA.GD.ZS</td>
+<td class="org-left"><b><b>BN.CAB.XOKA.GD.ZS</b></b></td>
 <td class="org-left">Current Account Balance as % of GDP</td>
 <td class="org-left">&#xa0;</td>
 </tr>
@@ -323,7 +323,7 @@ Below is a summary of each variable and its source and description.  These data 
 <tr>
 <td class="org-left">Formal Economy (bank financing)</td>
 <td class="org-left">WB</td>
-<td class="org-left">IC.FRM.BNKS.ZS</td>
+<td class="org-left"><b><b>IC.FRM.BNKS.ZS</b></b></td>
 <td class="org-left">Firms using banks to finance investment (% of firms)</td>
 <td class="org-left">&#xa0;</td>
 </tr>
@@ -371,7 +371,7 @@ Below is a summary of each variable and its source and description.  These data 
 <tr>
 <td class="org-left">GDP Growth</td>
 <td class="org-left">WB</td>
-<td class="org-left">NY.GDP.MKTP.KD.ZG</td>
+<td class="org-left"><b><b>NY.GDP.MKTP.KD.ZG</b></b></td>
 <td class="org-left">GDP growth (annual %)</td>
 <td class="org-left">&#xa0;</td>
 </tr>
@@ -379,7 +379,7 @@ Below is a summary of each variable and its source and description.  These data 
 <tr>
 <td class="org-left">GDP Per Capita Growth</td>
 <td class="org-left">WB</td>
-<td class="org-left">NY.GDP.PCAP.KD.ZG</td>
+<td class="org-left"><b><b>NY.GDP.PCAP.KD.ZG</b></b></td>
 <td class="org-left">GDP per capita growth (annual %)</td>
 <td class="org-left">&#xa0;</td>
 </tr>
@@ -403,7 +403,7 @@ Below is a summary of each variable and its source and description.  These data 
 <tr>
 <td class="org-left">Labor Force Part.</td>
 <td class="org-left">WB</td>
-<td class="org-left">SL.TLF.CACT.ZS</td>
+<td class="org-left"><b><b>SL.TLF.CACT.ZS</b></b></td>
 <td class="org-left">Labor force participation rate, total (% of total population ages 15+) (modeled ILO estimate)</td>
 <td class="org-left">&#xa0;</td>
 </tr>
@@ -445,8 +445,8 @@ Below is a summary of each variable and its source and description.  These data 
 </div>
 
 
-<div id="outline-container-org973000a" class="outline-2">
-<h2 id="org973000a"><span class="section-number-2">2</span> Questionable</h2>
+<div id="outline-container-org313dd81" class="outline-2">
+<h2 id="org313dd81"><span class="section-number-2">2</span> Questionable</h2>
 <div class="outline-text-2" id="text-2">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -508,8 +508,8 @@ Below is a summary of each variable and its source and description.  These data 
 </div>
 </div>
 
-<div id="outline-container-org48be2cb" class="outline-2">
-<h2 id="org48be2cb"><span class="section-number-2">3</span> Unavailable Data</h2>
+<div id="outline-container-org4aad63b" class="outline-2">
+<h2 id="org4aad63b"><span class="section-number-2">3</span> Unavailable Data</h2>
 <div class="outline-text-2" id="text-3">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
@@ -541,7 +541,7 @@ Below is a summary of each variable and its source and description.  These data 
 </div>
 </div>
 <div id="postamble" class="status">
-<p class="date">Created: 2019-07-01 Mon 13:28</p>
+<p class="date">Created: 2019-07-16 Tue 10:06</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
